<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="strAppName">CarMunicatorLibrary</string>
    <string name="strFullAppName">CarMunicator Full</string>
    <string name="preload1">Thanks</string>
    <string name="preload2">a</string>
    <string name="preload3">Signal</string>
    <string name="preload4">b</string>
    <string name="preload5">Sorry!</string>
    <string name="preload6">c</string>
    <string name="strOK">OK</string>
    <string name="strCancel">Cancel</string>
	<string name="strBuy">Buy</string>
    <string name="strDescriptionHint">Short Description</string>
    <string name="strMessageHint">Message Text</string>
	<string name="buy_pitch">You need to buy the full version to do this.</string>
	<string name="strBuyDialogTitle">Full Version Required</string>
</resources>
